keycloak/basic-keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80 
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: agentpool
                operator: NotIn
                values:
                - default
      tolerations:
      - effect: NoSchedule
        key: kubernetes.azure.com/scalesetpriority
        operator: Equal
        value: spot
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.4
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          resources: {}
