keycloak/reflection.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-keycloak
  namespace: keycloak 
spec:
  parentRefs:
    - name: api-gateway-istio
      namespace: mesh-example 
  hostnames:
    - keycloak.staging.telematicsplatform.tools
  rules:
    - matches:
        - path:
            value: /
            type: PathPrefix
      backendRefs:
        - name: keycloak 
          port: 80
